# nenv

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: args.rs  consts.rs  download.rs  error.rs  lib.rs  main.rs  nenv.rs  utils.rs  versioning.rs
src/config/: mod.rs  value.rs
src/mapper/: error.rs  mapped_command.rs  mapped_dir.rs  mod.rs  package_info.rs
src/mapper/version_detection/: env_detector.rs  package_json_detector.rs  version_file_detector.rs
src/repository/: config.rs  extract.rs  local_versions.rs  mod.rs  node_path.rs  versions.rs
src/repository/downloader/: mod.rs  version_info.rs  versions.rs
src/version_detection/: mod.rs
src/web_api/: error.rs  mod.rs  model.rs  test.rs
