[package]
name = "nenv"
version = "0.2.0"
edition = "2021"

[lib]
name = "nenv"

[[bin]]
name = "nenv"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
color-eyre = "0.6.2"
crossterm = "0.25.0"
dialoguer = "0.10.3"
dirs = "4.0.0"
futures = "0.3.25"
futures-util = "0.3.25"
indicatif = "0.17.3"
lazy_static = "1.4.0"
libflate = "1.2.0"
miette = "5.5.0"
reqwest = { version = "0.11.14", features = ["json", "stream"] }
semver = { version = "1.0.16", features = ["std", "serde"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
set_env = "1.3.4"
tar = "0.4.38"
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["rt", "macros", "tracing", "net", "fs", "time", "process"] }
toml = "0.5.11"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
zip = "0.6.3"

